moved date header into link to stop whole length of div being link; removed z-index from addeventatc and increased navbar to 1mio

--- a/app/assets/stylesheets/pages/_planner_index.scss
+++ b/app/assets/stylesheets/pages/_planner_index.scss
@@ -30,7 +30,6 @@
 
 .addeventatc {
   position: absolute !important;
-  z-index: 1 !important;
   background-color: rgba(255, 255, 255, 0.3) !important;
   border-radius: 3px 0px 0px 3px !important;
   width: 100px;
