--- a/app/assets/stylesheets/pages/_planners.scss
+++ b/app/assets/stylesheets/pages/_planners.scss
@@ -1,6 +1,7 @@
 .planners-planner-link {
   text-decoration: none;
-  color: black;
+  color: $gray;
+  font-size: 20px;
 
   &:hover {
     text-decoration: none;
